My Works project

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <ul class="works__list">
               <template>
                 <li class="works__list__item">
-                  <h4 class="works__list__title">AkademNashr</h4>
+                  <h4 class="works__list__title">Pixer-project</h4>
                   <div class="works__list__content">
                     <a
                       class="works__list__link__github works__list__link"
